Fix item panel overflow err

--- a/src/js/fmeFilter/index.less
+++ b/src/js/fmeFilter/index.less
@@ -22,9 +22,10 @@
     }
   }
   .fme-filter-items {
-    min-height: 190px;
+    height: 190px;
     display: none;
     padding: 8px;
+    overflow-x: auto;
     &.active {
       display: block;
     }
